--- a/static/index.html
+++ b/static/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>ArchApp</title>
-	<meta charset="utf-8">
-	<link rel="manifest" href="/manifest.json">
-	<link rel="stylesheet" href="/app.css">
-	<script src="/app.js"></script>
-	<meta name="HandheldFriendly" content="true">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<link rel="apple-touch-icon-precomposed" href="/favicon.png">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-	<meta name="format-detection" content="telephone=no">
-	<link rel="shortcut icon" href="./favicon.ico" type="image/vnd.microsoft.icon">
-	<link rel="icon" href="./favicon.ico" type="image/vnd.microsoft.icon">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-</head>
-<body>
-<!-- App -->
-<main id="app">
-	<header id="header">
-		<!-- Header -->
-	</header>
-	<section id="container">
-		<!-- Container -->
-	</section>
-	<footer id="footer">
-		<!-- Footer -->
-	</footer>
-</main>
-</body>
-<script>
-	console.log(`
+  <head>
+    <title>ArchApp</title>
+    <meta charset="utf-8" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="stylesheet" href="/app.css" />
+    <script src="/app.js"></script>
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="apple-touch-icon-precomposed" href="/favicon.png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="./favicon.ico" type="image/vnd.microsoft.icon" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <!-- App -->
+    <main id="app">
+      <header id="header">
+        <!-- Header -->
+      </header>
+      <section id="container">
+        <!-- Container -->
+      </section>
+      <footer id="footer">
+        <!-- Footer -->
+      </footer>
+    </main>
+  </body>
+  <script>
+    console.log(`
 ╔═╗┬─┐┌─┐┬ ┬ ╦╔═╗
 ╠═╣├┬┘│  ├─┤ ║╚═╗
 ╩ ╩┴└─└─┘┴ ┴╚╝╚═╝
-`);
-</script>
+`)
+  </script>
 </html>
